Fixing IPlugin.settingGroups not being abstract.

--- a/configs/config-2.6.yml
+++ b/configs/config-2.6.yml
@@ -2052,6 +2052,7 @@ mobase:
       returns: The list of requirements for this plugin.
 
     settingGroups:
+      abstract: false
       returns: A list of setting groups for this plugin.
 
     settings:
